--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password=home
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
-
+spring.mvc.hiddenmethod.filter.enabled=true
 
